# MEAN_MINI_project

./: .gitignore
backend/: .gitignore  HowTORun.md  pyproject.toml
backend/backend/: config.py  council.py  main.py  openrouter.py
frontend/src/context/: ContextProvider.jsx
frontend/src/utils/: api.js
